--- a/project/app/src/main/res/values/strings.xml
+++ b/project/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">petbus</string>
+    <string name="app_name">萌宠日记</string>
+    <string name="petdiary">萌宠日记</string> 
+    <string name="overview">统计</string> 
+    <string name="settting">设置</string> 
 </resources>
