--- a/project/app/src/main/res/values/strings.xml
+++ b/project/app/src/main/res/values/strings.xml
@@ -2,6 +2,12 @@
     <string name="app_name">萌宠日记</string>
     <string name="petdiary">萌宠日记</string> 
     <string name="overview">统计</string>
-    <string name="settting">设置</string>
+    <string name="setting">设置</string>
+    <string name="addrecode">添加记录</string>
     <string name="petname">宠物名字</string>
+    <string name="time">时间</string>
+    <string name="lovepet">爱宠</string>
+    <string name="actiontype">活动类型</string>
+    <string name="pleaseselect">请选择</string>
+    <string name="remark">备注</string>
 </resources>
