TerryCheng20190604:1.Add some doc for app. 2.recolour the background for the item of record

--- a/project/app/src/main/res/values/strings.xml
+++ b/project/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="actiontype">活动类型</string>
     <string name="pleaseselect">请选择</string>
     <string name="remark">备注</string>
+    <string name="save">保存</string>
 </resources>
