antiwey@gmail.com20190611: add profile fragment(empty)

--- a/project/app/src/main/res/values/strings.xml
+++ b/project/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="overview">统计</string>
     <string name="setting">设置</string>
     <string name="addrecode">添加记录</string>
+    <string name="petprofile">萌宠档案</string>
+    <string name="addpet">添加爱宠</string>
     <string name="petname">宠物名字</string>
     <string name="time">时间</string>
     <string name="lovepet">爱宠</string>
