--- a/project/app/src/main/res/values/strings.xml
+++ b/project/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="petdiary">萌宠日记</string> 
     <string name="overview">统计</string>
     <string name="setting">设置</string>
-    <string name="addrecode">添加记录</string>
+    <string name="addrecord">添加记录</string>
     <string name="petprofile">萌宠档案</string>
     <string name="addpet">添加爱宠</string>
     <string name="petname">宠物名字</string>
