--- a/project/app/src/main/res/values/strings.xml
+++ b/project/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="infofinish">确认  >></string>
     <string name="actionphoto">相册</string>
     <string name="actioncamera">摄像头</string>
+    <string name="fead">喂食</string>
 </resources>
