--- a/project/app/src/main/res/values/strings.xml
+++ b/project/app/src/main/res/values/strings.xml
@@ -27,4 +27,13 @@
     <string name="actionphoto">相册</string>
     <string name="actioncamera">摄像头</string>
     <string name="fead">喂食</string>
+    <string name="photo_dialog_title">请选择</string>
+    <string name="photo_dialog_message">请选择图片来源</string>
+    <string name="monday">星期一</string>
+    <string name="tuesday">星期二</string>
+    <string name="wednesday">星期三</string>
+    <string name="thursday">星期四</string>
+    <string name="friday">星期五</string>
+    <string name="saturday">星期六</string>
+    <string name="sunday">星期天</string>
 </resources>
