--- a/project/app/src/main/res/values/strings.xml
+++ b/project/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="infospeciesdog">汪星人</string>
     <string name="infospeciescat">喵星人</string>
     <string name="infofinish">确认  >></string>
+    <string name="infosave">保存</string>
     <string name="actionphoto">相册</string>
     <string name="actioncamera">摄像头</string>
     <string name="fead">喂食</string>
