antiwey@gmail.com20190617: 1. 对宠物信息输入页面做输入值的检查，必须有输入才能跳转到下一页 2. 宠物体重改为Double型 3. 宠物信息页面单选项添加默认值

--- a/project/app/src/main/res/values/strings.xml
+++ b/project/app/src/main/res/values/strings.xml
@@ -42,4 +42,5 @@
     <string name="mini_before">分前</string>
     <string name="rightnow">刚刚</string>
     <string name="nullstring">---</string>
+    <string name="inputEmpty">请填写宠物信息</string>
 </resources>
