TerryCheng20190623:1.添加记录，可以选择多个宠物。 2。记录的显示，目前就一个显示出来了。

--- a/project/app/src/main/res/values/strings.xml
+++ b/project/app/src/main/res/values/strings.xml
@@ -46,4 +46,5 @@
     <string name="selected">选择</string>
     <string name="unselected">取消选择</string>
     <string name="title">标题</string>
+    <string name="confirm">确定</string>
 </resources>
