TerryCheng20190702:1.修改了一些CRASH问题。 2。按两次返回键退出。

--- a/project/app/src/main/res/values/strings.xml
+++ b/project/app/src/main/res/values/strings.xml
@@ -47,4 +47,5 @@
     <string name="unselected">取消选择</string>
     <string name="title">标题</string>
     <string name="confirm">确定</string>
+    <string name="doubletoexit">双击返回退出</string>
 </resources>
