TerryCheng20190716:1.优化action的listview。提前加载图片等信息。

--- a/project/app/src/main/res/values/strings.xml
+++ b/project/app/src/main/res/values/strings.xml
@@ -48,4 +48,5 @@
     <string name="title">标题</string>
     <string name="confirm">确定</string>
     <string name="doubletoexit">双击返回退出</string>
+    <string name="pageloading">加载中</string>
 </resources>
