1. 调整 添加宠物，和宠物档案页面布局 2. 上传图片资源 3. 新增sketch中文文件

--- a/project/app/src/main/res/values/strings.xml
+++ b/project/app/src/main/res/values/strings.xml
@@ -21,8 +21,8 @@
     <string name="infogendermale">弟弟</string>
     <string name="infogenderfemale">妹妹</string>
     <string name="infospecies">星球</string>
-    <string name="infospeciesdog">汪星人</string>
-    <string name="infospeciescat">喵星人</string>
+    <string name="infospeciesdog">汪星</string>
+    <string name="infospeciescat">喵星</string>
     <string name="infofinish">确认  >></string>
     <string name="infosave">保存</string>
     <string name="actionphoto">相册</string>
