antiwey@gmail.com:20190919 1. Fix bug PB272-宠物编辑-更改宠物名称无效    [问题原因]UPDAE 宠物资料时，判断条件是宠物名称，导致当宠物名称更改时无法在数据库中找到该条记录，从而导致UPDATE失败    [解决方案]将判断条件改为id 2. 去掉代码中冗余的toast语句 3. 补充提交上一次提交（SHA-1: 395920bc3a162aaaa15fe68ccce06c3c0347f611）漏掉的xml文件

--- a/project/app/src/main/res/values/strings.xml
+++ b/project/app/src/main/res/values/strings.xml
@@ -52,4 +52,7 @@
     <string name="pageloading">加载中</string>
     <string name="edit">编辑</string>
     <string name="del">删除</string>
+    <string name="age_year">岁</string>
+    <string name="age_month">个月</string>
+    <string name="age_day">天</string>
 </resources>
